# spooky

./: .dockerignore  .gitignore  .oxlintrc.json  .prettierignore  CNAME  Cargo.toml  Dockerfile  LICENSE  README.md  REFACTORING_SUMMARY.md  SUBQUERY_IMPLEMENTATION.md  TODO.md  browser-create-comment.txt  browser-page-load.txt  browser.txt  cloud-plan.md  index.html  llm.txt  log_browser.txt  log_terminal.txt  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  validate_edge_flow.sh
.claude/: settings.local.json
_astro/: ArchitectureDiagram.2uv5l68h.js  ArchitectureDiagram.BFX2G2G6.js  ArchitectureDiagram.BWvLRgWs.js  ArchitectureDiagram.Bbk_Esek.js  ArchitectureDiagram.CKr8tjBf.js  ArchitectureDiagram.CjW2xXPm.js  ArchitectureDiagram.CvJvcNF-.js  AsciiGhost.CqLGnlcy.js  AsciiGhost.an8dk_iP.js  CodeBlock.BOzeUk-e.css  CodeBlock.Ba_GIIER.css  CodeBlock.BvTsiMLB.css  CodeBlock.C4LNw1l_.css  CodeBlock.Cc3O_vby.css  CodeBlock.DnyRBq5F.css  CodeBlock.Rjd1o5wG.css  CodeBlock.matJAzQm.css  DXFeatureGrid.B9T0Fwr4.js  DXFeatureGrid.CJIV1eZP.js  DXFeatureGrid.D1WyasNa.js  DXFeatureGrid.D2buYyko.js  DXFeatureGrid.DXCd31mS.js  DXFeatureGrid.DqqUNn76.js  DXFeatureGrid.xsm5aX97.js  DXSwiper.DbQy748L.js  DeployTerminal.BpcjywOl.js  DocsLayout.BrXD0VjJ.css  DocsLayout.CgucOktW.css  DocsLayout.DCPPAI4n.css  DocsLayout.OSXg6Qjf.css  DocsLayout.astro_astro_type_script_index_0_lang.BAAC_U7D.js  DocsLayout.astro_astro_type_script_index_0_lang.CIpswlDw.js  DocsLayout.astro_astro_type_script_index_0_lang.Cbf3gP5a.js  DocsLayout.astro_astro_type_script_index_1_lang.BRw4ogRd.js  DocsLayout.astro_astro_type_script_index_1_lang.CSc0ynAD.js  DocsLayout.astro_astro_type_script_index_1_lang.CWlSDCTd.js  DocsLayout.astro_astro_type_script_index_1_lang.LkN3OUXJ.js  DocsLayout.hA_E0KQz.css  FloatingGhosts.CHSnWB5Y.js  GitHubStars.BSGIgOIe.js  (+366 more)
apps/cli/: AGENTS.md  Cargo.toml  README.md  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1769357879129-6c2c11312c2b7.mjs
apps/cli/mcp-proxy/: index.js  server.d.ts  server.js  surreal.d.ts  surreal.js
apps/cli/npm/cli-darwin-arm64/: package.json
apps/cli/npm/cli-darwin-x64/: package.json
apps/cli/npm/cli-linux-arm64/: package.json
apps/cli/npm/cli-linux-x64/: package.json
apps/cli/npm/cli-win32-x64/: package.json
apps/cli/src/: add_api.rs  agents.rs  annotations.rs  backend.rs  bucket.rs  cli.ts  cloud.rs  codegen.rs  create.rs  dev.rs  docker-compose.surrealism.yml  doctor.rs  functions_remote.surql  functions_remote_sidecar.surql  functions_remote_singlenode.surql  functions_remote_surrealism.surql  index.ts  json_schema.rs  logs_browser.rs  main.rs  mcp.rs  meta_tables.surql  meta_tables_client.surql  meta_tables_remote.surql  migrate.rs  migration_tables.surql  modules.rs  package_manager.rs  parser.rs  resolve-binary.ts  scaffold.rs  schema_builder.rs  schema_diff.rs  schema_extract.rs  setup.rs  sp00ky.rs  spooky.rs  surreal_client.rs  verify.rs
apps/cli/src/migration/: engine.rs  legacy.rs  mod.rs  sp00ky_engine.rs  surrealkit.rs
apps/cli/src/templates/app/: index.html.tmpl  package.json.tmpl  vite.config.ts.tmpl
apps/cli/src/templates/app/src/: App.noauth.tsx.tmpl  App.tsx.tmpl  db.ts.tmpl  schema.gen.ts.tmpl
apps/cli/src/templates/schema/: empty.surql  example.surql
apps/cli/src/templates/shared/: claude-md-full.tmpl  claude-md-schema.tmpl  claude-settings.json.tmpl  gitignore.tmpl  root-package.json.tmpl  schema-package.json.tmpl  sp00ky.yml.tmpl  spooky.yml.tmpl
apps/cli/templates/cookbook/: INDEX.md  crdt-text-field.tsx  live-list.tsx  optimistic-mutation.tsx
apps/scheduler/: Cargo.toml  Dockerfile  README.md
apps/scheduler/src/: backend_health.rs  backup.rs  config.rs  ingest.rs  job_scheduler.rs  lib.rs  main.rs  messages.rs  metrics.rs  proxy.rs  query.rs  replica.rs  restore.rs  router.rs  ssp_management.rs  wal.rs
apps/scheduler/src/transport/: mod.rs  nats.rs
apps/scheduler/tests/: integration.rs
apps/scheduler/tests/e2e/: docker-compose.yml  restore.sh
apps/spooky-sidecar/: Cargo.toml  Dockerfile  package.json
apps/spooky-sidecar/src/: background_saver.rs  main.rs  persistence.rs
apps/ssp/: Cargo.toml  Dockerfile  README.md  issues.md  package.json
apps/ssp/src/: background_saver.rs  crdt.rs  impl.md  lib.rs  main.rs  metrics.rs  nats_client.rs  open_telemetry.rs  persistence.rs  server_ssp_module_imp.md
apps/ssp/tests/: api_tests.rs  edge_creation_test.rs  edge_overlap_test.rs  edge_verification.rs  integration.rs  scenario_test.rs
assets/: DocsLayout.astro_astro_type_script_index_1_lang.CSc0ynAD.js  channel.CLxlaTxX.js  chunk-4BX2VUAB.D-cW39I4.js  chunk-B4BG7PRW.DzDqTbWN.js  chunk-FMBD7UC4.np1env1-.js  dagre-6UL2VRFP.BmO6DjU3.js  flowDiagram-NV44I4VS.DB8xGDSt.js  ganttDiagram-JELNMOA3.CFOAousy.js  journeyDiagram-XKPGCS4Q.ycmzBMp7.js  quadrantDiagram-AYHSOK5B.eZEvIN_Q.js
cloud/: index.html
docs/: crdt-flow.html  dbsp-deep-dive.md  hashing_logic.md  index.html  module_contracts.md  ssp-app.md  ssp-wasm.md
example/: AGENTS.md  package.json  sp00ky.yml  spooky.yml
features/: index.html
pagefind/: pagefind-entry.json  pagefind.en_121a747dd6.pf_meta  pagefind.en_129e848df2.pf_meta  pagefind.en_1e3faef6a4.pf_meta  pagefind.en_253343e2b2.pf_meta  pagefind.en_288545b740.pf_meta  pagefind.en_2cf8506d9a.pf_meta  pagefind.en_2ea2af9a8d.pf_meta  pagefind.en_34b0b32ee7.pf_meta  pagefind.en_378e583e3d.pf_meta  pagefind.en_3b9ec6d721.pf_meta  pagefind.en_3c7564fb28.pf_meta  pagefind.en_3f82fce98f.pf_meta  pagefind.en_45944e7ad2.pf_meta  pagefind.en_48678617d7.pf_meta  pagefind.en_486b853d87.pf_meta  pagefind.en_4d54136af5.pf_meta  pagefind.en_4f4dcb83d1.pf_meta  pagefind.en_4fdfb3e458.pf_meta  pagefind.en_5179fa3ece.pf_meta  pagefind.en_521853ba4e.pf_meta  pagefind.en_5c7c18e3e3.pf_meta  pagefind.en_5d51e1b487.pf_meta  pagefind.en_5df5e87265.pf_meta  pagefind.en_631017b524.pf_meta  pagefind.en_64c95587bb.pf_meta  pagefind.en_65a155e85f.pf_meta  pagefind.en_68498712f1.pf_meta  pagefind.en_767c4ae352.pf_meta  pagefind.en_7883d35361.pf_meta  pagefind.en_7cf8bd67e8.pf_meta  (+23 more)
(+1486 files in other folders)
