[package]
name = "spooky-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spooky"
path = "src/main.rs"

[dependencies]
surrealdb-core = "2.3"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12.2"
tar = "0.4"
zstd = "0.13"
tempfile = "3.10"
inquire = "0.7"

