[package]
name = "sp00ky-cli"
version = "0.0.1-canary.29"
edition = "2021"

[[bin]]
name = "spooky"
path = "src/main.rs"

[dependencies]
surrealdb-core = "2.3"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12.2"
tar = "0.4"
zstd = "0.13"
tempfile = "3.10"
inquire = "0.7"
serde_yaml = "0.9"
openapiv3 = "2.0"
ureq = { version = "2.9", features = ["json"] }
sha2 = "0.10"
base64 = "0.22"
ctrlc = "3.4"
crossterm = "0.28"
dirs = "6.0"
open = "5"

