[package]
name = "spooky-sidecar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v3.0.0-beta.1", features = ["protocol-ws", "protocol-http"] }
tokio = { version = "1.0", features = ["full"] }
spooky-stream-processor = { path = "../../packages/spooky-stream-processor" }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15.7"
blake3 = "1.8.2"
