[package]
name = "ssp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v3.0.0-beta.1", features = ["protocol-ws", "protocol-http"] }
tokio = { version = "1.0", features = ["full"] }
ssp = { path = "../../packages/ssp" }
job-runner = { path = "../../packages/job-runner" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-opentelemetry = "0.28"

opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "logs"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "logs"] }
opentelemetry-appender-tracing = "0.27"

dotenvy = "0.15.7"
blake3 = "1.8.2"
env = "1.0.1"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
mime = "0.3"
