[package]
name = "ssp-server"
version = "0.0.1-canary.49"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = { version = "3.0.0", features = ["protocol-ws", "protocol-http"] }
tokio = { version = "1.0", features = ["full"] }
ssp = { path = "../../packages/ssp" }
job-runner = { path = "../../packages/job-runner" }
ssp-protocol = { path = "../../packages/ssp-protocol" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-opentelemetry = "0.28"

opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "logs"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "logs"] }
opentelemetry-appender-tracing = "0.27"

dotenvy = "0.15.7"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
hostname = "0.4"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
